
- integer type casting is not working on parameters
- freebsd rounding of 2.5 fails because freebsd rounds down instead of up (FreeBSD Ada bug??)

CHANGES

1. New: pragma restriction( no_mysql_database / no_postgresql_database ) to
disable connections to a database engine.

2. Change: more error detection on pragma import / export / unchecked_import

3. New: pragma license - declare a script's license

4. New: System.Script_License - read the license name in a running script

5. New: help -l - read a script license without running a script

6. New: memcache package.  add( cl, k, v ), prepend( cl, k, v ), append( cl, k, v ), register_server( cl, h, p ), clear_servers( cl ), replace( cl, k, v ), delete( cl, k ), set( cl, k, v ), flush( cl ), set_cluster_name( cl, s ), is_valid_memcache_key( k ), set_cluster_type( cl, e ), v := get( cl, k ), s := stats( cl ), cl := new_cluster, s := version( cl )

7. New: memcache.highread package.  add( cl, k, v ), prepend( cl, k, v ), append( cl, k, v ), register_alpha_server( cl, h, p ), register_beta_server( cl, h, p ), clear_servers( cl ), replace( cl, k, v ), delete( cl, k ), set( cl, k, v ), flush( cl ), set_cluster_name( cl, s ), set_cluster_type( cl, e ), v := get( cl, k ), s := stats( cl ), cl := new_cluster, s := version( cl )

8. Change: -n / --no-check command option dropped.  It is incompatible with include
files / separate procuedures and functions.

9. New: with include and separate declaration files have been backported into SparForte from the BUSH 2.0 code base.

10. Fix: ] is escaped when searching in globbing pattern for shell words.

11. Fix: Dollar expansion variables names now terminated by first
non-alpha/underscore character, which is more like a typical Bourne shell.

12. Fix: "error in globbing expression" expressions no longer raised on shell
words with characters that cannot be globbed.

13. New: Additional template types: css, js, json, wml and xml.

14. Change: Reorganized regression testsuite.
